# cookiecutter-pypackage

./: CONTRIBUTING.rst  README.rst  cookiecutter.json  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
docs/: index.rst  prompts.rst  tutorial.rst
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: CONTRIBUTING.rst  README.rst  pyproject.toml  tasks.py  tox.ini
{{cookiecutter.project_slug}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.project_slug}}/docs/: usage.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
